--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div id="timer">0s</div>
   <button id="startBtn">Iniciar</button>
   <button id="resetBtn">Recomeçar</button>
+  <button id="installBtn" style="display:none;">Instalar App</button>
 
   <script src="app.js"></script>
 </body>
